# snakemk_util

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  environment-dev.yml  pyproject.toml  release-please-config.json  setup.cfg  setup.py
.github/workflows/: check-pr.yml  ci.yml  publish.yml  release-please.yml  snakemake-compat.yml
snakemk_util/: __init__.py  formatting.py  main.py  rule_args.py
tests/: conftest.py  test_cli.py  test_rule_args.py
tests/data/test_named_params/: Snakefile
tests/data/test_output_args/: Snakefile
tests/data/test_rule_args/: Snakefile
tests/data/test_rule_args_workdir/configs/: config.yaml
tests/data/test_rule_args_workdir/workflow/: Snakefile  side.smk
