[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snakemk_util"
dynamic = ["version"]
description = "utility functions for snakemake"
authors = [
    { name = "Florian R. Hölzlwimmer", email = "git.ich@frhoelzlwimmer.de" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "snakemake>=9,<10",
]

[project.scripts]
snakemk_util = "snakemk_util.main:main"

[project.urls]
"Homepage" = "https://github.com/Hoeze/snakemk_util"

[dependency-groups]
dev = [
    "bumpversion",
    "tox>=4",
    "tox-uv",
]
test = [
    "pytest>=8,<9",
    "pytest-xdist",
    "pytest-mock",
    "pytest-cov",
]
lint = [
    "ruff",
]

[tool.setuptools]
packages = ["snakemk_util"]

[tool.setuptools.dynamic]
version = { attr = "snakemk_util.__version__" }

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "SIM", "PLR"]
"__init__.py" = ["F401"]

[tool.tox]
requires = ["tox>=4", "tox-uv"]
env_list = ["format-check", "lints", "py3.11", "py3.14"]
isolated_build = true

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "run unit tests"
dependency_groups = ["test"]
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]

[tool.tox.env."format-check"]
runner = "uv-venv-lock-runner"
skip_install = true
dependency_groups = ["lint"]
commands = [["ruff", "format", "--check", "."]]

[tool.tox.env."lints"]
runner = "uv-venv-lock-runner"
skip_install = true
dependency_groups = ["lint"]
commands = [["ruff", "check", "."]]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]